menambahkan beberapa halaman dan membuat function translate

--- a/content/credit-card.html
+++ b/content/credit-card.html
@@ -95,6 +95,17 @@
             ><span class="ti-instagram"></span
           ></a>
         </div>
+        <!-- facebook -->
+        <div class="d-block">
+          <a
+            href="https://facebook.com/thobysaha/"
+            class="btn btn-fab btn-sm"
+            title="Facebook"
+            data-toggle="tooltip"
+            data-placement="left"
+            ><span class="ti-facebook"></span
+          ></a>
+        </div>
         <!-- Settings -->
         <div class="d-block">
           <button class="btn btn-fab btn-sm" id="sideel" title="Settings">
@@ -124,6 +135,7 @@
             data-class="theme-purple"
           ></span>
         </div>
+        <div id="google_translate_element" class="mb-3"></div>
         <select class="custom-select d-block my-2" id="change-page">
           <option value="">Choose Page</option>
           <option value="index">Home</option>
@@ -176,17 +188,115 @@
           <div class="badge badge-subhead">Data Analytic</div>
         </div>
         <h2 class="text-center fw-normal wow fadeInUp">
-          Covid-19 Disease Dashboard | Indonesia 2022
+          Credit Card Applicant Approval Prediction
         </h2>
-        <div class="d-flex justify-content-center py-5">
-          <iframe
-            width="825"
-            height="937"
-            src="https://lookerstudio.google.com/embed/reporting/21f41a1d-d0fb-4cab-8b1c-abd9ae1c3147/page/WSS3C"
-            frameborder="0"
-            style="border: 0"
-            allowfullscreen
-          ></iframe>
+        <div class="container text-justify justify-content-center py-5">
+          <h4>Background</h4>
+          <p class="mb-3">
+            In response to the dynamic landscape of Indonesia's rapidly
+            expanding credit card market, our team has initiated a significant
+            data-driven endeavor titled "Credit Card Applicant Approval
+            Prediction" This project marks the pinnacle of our Proof of Concept
+            (PoC) effort as part of Data Fellowship 10 IYKRA.
+            <br /><br />
+            Indonesia's credit card market has displayed remarkable growth over
+            the past five years, reaching an impressive valuation of IDR 4.43
+            Trillion. Within this rapidly evolving market, our organization
+            holds a substantial 30% market share. In 2022, the approval rate for
+            credit card applications reached 27.1%, resulting in the approval of
+            4.25 million new credit cards. Projections for 2023 suggest
+            <b> a potential 19.1 million new credit card approvals. </b>
+            However, the context surrounding credit card approvals is far from
+            straightforward. A significant concern is
+            <b> the estimated 5% of potential losses </b> attributed to
+            fraudulent or unqualified applicants. It is imperative for our
+            organization to secure its market position and comply with evolving
+            Personal Data Protection (PDP) regulations.
+          </p>
+          <h4>Objective</h4>
+          <p class="mb-3">
+            In response to these challenges, our objective is crystal clear: to
+            design an end-to-end data pipeline solution that significantly
+            enhances the accuracy of credit card approval predictions. We intend
+            to harness the power of scalable data architecture, which, in turn,
+            will empower our Data Scientists and Machine Learning Engineers to
+            operate with maximum efficiency. <br />
+            <br />
+            Our primary goal is to
+            <b>
+              ensure that only genuinely qualified applicants are approved for
+              credit cards </b
+            >, thereby minimizing potential losses and reinforcing our market
+            presence. Simultaneously, we are committed to upholding the
+            strictest standards of data privacy and protection, in alignment
+            with the prevailing PDP regulations.
+          </p>
+          <h4>Data Architecture and Dashboard</h4>
+          <p class="mb-3">
+            To achieve this objective, we have constructed a sophisticated data
+            architecture. This architecture is designed to integrate and process
+            data efficiently, yielding the necessary insights for more accurate
+            credit card approval predictions. We employ various technologies and
+            tools, including cloud-based data processing, to ensure scalability
+            and security in managing sensitive data.
+          </p>
+          <p class="mb-3">
+            Furthermore, we have developed an analysis dashboard, serving as a
+            vital monitoring tool. This dashboard enables our team to real-time
+            track the progress of credit card approvals, monitor the performance
+            of prediction models, and gain valuable insights. With this
+            dashboard, we can take proactive actions to minimize risks and
+            enhance the efficiency of the approval process.
+          </p>
+          <p class="mb-3">
+            This project represents our commitment to harness data technology to
+            achieve better credit card approval predictions, maintain a strong
+            market position, and comply with data protection regulations.
+            Through efficient data architecture and analysis dashboard, we
+            provide a reliable and secure solution to support the growth and
+            success of our business.
+          </p>
+          <h3>Infrastructure Presentation</h3>
+          <p class="mb-3">
+            For a comprehensive understanding of our data infrastructure and the
+            technologies used, we have created a presentation slide deck below.
+            This presentation includes detailed information about the technology
+            stack employed, as well as an overview of the dashboard that has
+            been developed.
+          </p>
+          <div class="text-center mb-3">
+            <iframe
+              src="https://docs.google.com/presentation/d/e/2PACX-1vR_pPrrSPBThRzwmRwRvgIPmpHQGNktiJ3oCJCK1qD8vdsbhiIEv8rJzycAY6uOGp2Jc7HEJ5CyX2Xi/embed?start=false&loop=false&delayms=5000"
+              frameborder="0"
+              width="960"
+              height="569"
+              allowfullscreen="true"
+              mozallowfullscreen="true"
+              webkitallowfullscreen="true"
+            ></iframe>
+          </div>
+          <p class="mb-3">
+            Through this presentation, you will gain a deeper insight into the
+            intricacies of our data architecture, ensuring transparency and
+            clarity in our approach to achieving better credit card approval
+            predictions.
+          </p>
+          <h3>Access The Dashboard</h3>
+          <p class="mb-3">
+            If you would like to access the dashboard directly and witness our
+            credit card approval prediction system in action, please click on
+            the following link:
+            <a
+              class="text-center"
+              href="https://lookerstudio.google.com/reporting/cd1f7024-5ac4-48a4-9878-70ee8587a15f"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><b>Dashboard</b></a
+            >. This link will provide you with real-time access to our
+            dashboard, allowing you to explore the functionality and insights it
+            offers. We welcome you to experience firsthand the power of our
+            data-driven solution.
+          </p>
         </div>
       </div>
     </div>
@@ -257,6 +367,23 @@
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
+    ></script>
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
     ></script>
   </body>
 </html>
