--- a/portfolio.html
+++ b/portfolio.html
@@ -104,6 +104,17 @@
             ><span class="ti-instagram"></span
           ></a>
         </div>
+        <!-- facebook -->
+        <div class="d-block">
+          <a
+            href="https://facebook.com/thobysaha/"
+            class="btn btn-fab btn-sm"
+            title="Facebook"
+            data-toggle="tooltip"
+            data-placement="left"
+            ><span class="ti-facebook"></span
+          ></a>
+        </div>
         <!-- Settings -->
         <div class="d-block">
           <button class="btn btn-fab btn-sm" id="sideel" title="Settings">
@@ -133,6 +144,7 @@
             data-class="theme-purple"
           ></span>
         </div>
+        <div id="google_translate_element" class="mb-3"></div>
         <select class="custom-select d-block my-2" id="change-page">
           <option value="">Choose Page</option>
           <option value="index">Home</option>
@@ -244,128 +256,50 @@
                     <img src="/assets/img/work/credit.png" alt="Credit Card Portfolio Dashboard" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title fg-theme">Credit Card Portfolio Dashboard</h5>
-                        <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos voluptatem, quo repudiandae similique, natus officia adipisci iste amet architecto qui reiciendis veritatis? Ratione perspiciatis</p>
-                        <a href='#' target='_blank' class="fg-theme">Read More</a>
+                        <p class="card-text text-justify">This project is part of the Data Fellowship 10 IYKRA and aims to design a data architecture solution that will reduce potential market losses resulting from a poor credit portfolio.</p>
+                        <a href='/content/credit-card.html' target='_blank' class="fg-theme">Read More</a>
                     </div>
                 </div>
             </div>
           </div>
           <!-- end of iykra -->
+          <!-- Marketing dashboard -->
+          <div class="grid-item analytic wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/tableau-marketing_superstore.png" alt="Marketing Dashboard (Superstore)" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Marketing Dashboard (Superstore)</h5>
+                        <p class="card-text text-justify">This project hones my data comprehension skills and proficiency in creating effective visualizations using Tableau. I improved my ability to design clear and captivating visualizations.</p>
+                        <a href='https://public.tableau.com/shared/THNJF7BGT?:display_count=n&:origin=viz_share_link' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- end of Marketing dashboard -->
           <!-- end of analytics -->
           
           <!-- web -->
-   
+           <!-- monbi system -->
+          <div class="grid-item web wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/monbi.png" alt="Monbi Tracing System" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Monbi Tracing System</h5>
+                        <p class="card-text text-justify">This project hones my data comprehension skills and proficiency in creating effective visualizations using Tableau. I improved my ability to design clear and captivating visualizations.</p>
+                        <a href='/content/monbi.html' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- end of monbi system -->
           <!-- end of web -->
         </div>
         <!-- end of card content -->
         <!-- End gridder -->
         
       </div>
-    <!-- .... -->
-     <!-- <div class="container mt-5">
-        <h1 class="text-center mb-5">Daftar Portofolio</h1>
-
-        <div class="row">
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?nature" alt="Portofolio 1" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 1</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 1.</p>
-                        <a href="portfolio1.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?technology" alt="Portofolio 2" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 2</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 2.</p>
-                        <a href="portfolio2.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?art" alt="Portofolio 3" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 3</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 3.</p>
-                        <a href="portfolio3.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?design" alt="Portofolio 4" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 4</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 4.</p>
-                        <a href="portfolio4.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?travel" alt="Portofolio 5" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 5</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 5.</p>
-                        <a href="portfolio5.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?food" alt="Portofolio 6" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 6</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 6.</p>
-                        <a href="portfolio6.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?music" alt="Portofolio 7" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 7</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 7.</p>
-                        <a href="portfolio7.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?architecture" alt="Portofolio 8" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 8</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 8.</p>
-                        <a href="portfolio8.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-5">
-                <div class="portfolio-item card">
-                    <img src="https://source.unsplash.com/150x150/?sports" alt="Portofolio 9" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Portofolio 9</h5>
-                        <p class="card-text">Deskripsi singkat tentang Portofolio 9.</p>
-                        <a href="portfolio9.html" class="fg-theme">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
     <!-- End Content -->
     <!-- Footer -->
     <div class="vg-footer">
@@ -432,6 +366,22 @@
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
+    ></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: "en",
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+          },
+          "google_translate_element"
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
     ></script>
   </body>
 </html>
