merubah sample portfolio di main page

--- a/portfolio.html
+++ b/portfolio.html
@@ -287,7 +287,7 @@
                     <img src="/assets/img/work/monbi.png" alt="Monbi Tracing System" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title fg-theme">Monbi Tracing System</h5>
-                        <p class="card-text text-justify">This project hones my data comprehension skills and proficiency in creating effective visualizations using Tableau. I improved my ability to design clear and captivating visualizations.</p>
+                        <p class="card-text text-justify">The MONBI Tracing System project represents a critical step in the company's efforts to improve their expense management processes. In an increasingly competitive business environment,..</p>
                         <a href='/content/monbi.html' target='_blank' class="fg-theme">Read More</a>
                     </div>
                 </div>
