menyempurnakan portfolio page

--- a/content/pages/credit-card.html
+++ b/content/pages/credit-card.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Tobi's Page</title>
+    <title>Portfolio - Credit Crad</title>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -43,7 +43,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="../assets/css/minibar.virtual.css"
+      href="../../assets/css/minibar.virtual.css"
     />
 
     <link
@@ -152,8 +152,8 @@
       </div>
       <div class="content">
         <ul class="main-menu">
-          <li class="menu-item active">
-            <a href="/index.html#home" class="menu-link">
+          <li class="menu-item">
+            <a href="/index.html" class="menu-link">
               <span class="icon ti-home"></span>
               <span class="caption">Home</span>
             </a>
@@ -164,8 +164,8 @@
               <span class="caption">About</span>
             </a>
           </li>
-          <li class="menu-item">
-            <a href="/index.html#portfolio" class="menu-link">
+          <li class="menu-item active">
+            <a href="/portfolio.html" class="menu-link">
               <span class="icon ti-briefcase"></span>
               <span class="caption">Portfolio</span>
             </a>
@@ -360,26 +360,16 @@
     <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
 
     <script src="/assets/js/google-maps.js"></script>
+    <script src="/assets/js/google-translate.js"></script>
 
-    <script src="../assets/js/minibar-virtual.js"></script>
+    <script src="/assets/js/topbar-virtual.js"></script>
+    <script src="/assets/js/util.js"></script>
 
     <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
     ></script>
-
-    <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          {
-            pageLanguage: "en",
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          },
-          "google_translate_element"
-        );
-      }
-    </script>
 
     <script
       type="text/javascript"
