--- a/content/pages/monbi.html
+++ b/content/pages/monbi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Tobi's Page</title>
+    <title>Portfolio - MONBI</title>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -38,18 +38,18 @@
       type="text/css"
       href="/assets/vendor/fancybox/css/jquery.fancybox.min.css"
     />
+
     <link rel="stylesheet" type="text/css" href="/assets/css/virtual.css" />
 
     <link
       rel="stylesheet"
       type="text/css"
-      href="../assets/css/minibar.virtual.css"
+      href="/assets/css/topbar.virtual.css"
     />
-
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/css/topbar.virtual.css"
+      href="../../assets/css/minibar.virtual.css"
     />
   </head>
 
@@ -153,7 +153,7 @@
       <div class="content">
         <ul class="main-menu">
           <li class="menu-item">
-            <a href="/index.html#home" class="menu-link">
+            <a href="/index.html" class="menu-link">
               <span class="icon ti-home"></span>
               <span class="caption">Home</span>
             </a>
@@ -165,7 +165,7 @@
             </a>
           </li>
           <li class="menu-item active">
-            <a href="/index.html#portfolio" class="menu-link">
+            <a href="/portfolio.html" class="menu-link">
               <span class="icon ti-briefcase"></span>
               <span class="caption">Portfolio</span>
             </a>
@@ -430,7 +430,6 @@
     </div>
 
     <!-- End footer -->
-
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
 
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
@@ -452,25 +451,16 @@
     <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
 
     <script src="/assets/js/google-maps.js"></script>
+    <script src="/assets/js/google-translate.js"></script>
 
-    <script src="../assets/js/minibar-virtual.js"></script>
+    <script src="/assets/js/topbar-virtual.js"></script>
+    <script src="/assets/js/util.js"></script>
 
     <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
     ></script>
-    <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          {
-            pageLanguage: "en",
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          },
-          "google_translate_element"
-        );
-      }
-    </script>
 
     <script
       type="text/javascript"
