--- a/portfolio.html
+++ b/portfolio.html
@@ -204,10 +204,10 @@
             All
           </button>
           <button class="btn btn-theme-outline" data-filter=".analytic">
-            Analytic
+            Analytics
           </button>
-          <button class="btn btn-theme-outline" data-filter=".ui-ux">
-            UI/UX
+          <button class="btn btn-theme-outline" data-filter=".system">
+            System
           </button>
           <button class="btn btn-theme-outline" data-filter=".web">
             Web
@@ -218,6 +218,18 @@
         <!-- card content -->
         <div class="gridder my-3">
           <!-- ui ux -->
+          <div class="grid-item system wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/ui-bcs.png" alt="Monbi Tracing System" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Bladder Control Stock</h5>
+                        <p class="card-text text-justify">This project was conceived to address these challenges by providing an automated, efficient, and reliable web-based solution. With the implementation of this project, the company aims to enhance Bladder management,</p>
+                        <a href='/content/pages/bcs.html' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
           <!-- end of ui ux -->
 
           <!-- analytics -->
@@ -257,7 +269,7 @@
                     <div class="card-body">
                         <h5 class="card-title fg-theme">Credit Card Portfolio Dashboard</h5>
                         <p class="card-text text-justify">This project is part of the Data Fellowship 10 IYKRA and aims to design a data architecture solution that will reduce potential market losses resulting from a poor credit portfolio.</p>
-                        <a href='/content/credit-card.html' target='_blank' class="fg-theme">Read More</a>
+                        <a href='/content/pages/credit-card.html' target='_blank' class="fg-theme">Read More</a>
                     </div>
                 </div>
             </div>
@@ -280,15 +292,15 @@
           <!-- end of analytics -->
           
           <!-- web -->
-           <!-- monbi system -->
+          <!-- monbi system -->
           <div class="grid-item web wow zoomIn">       
             <div class="mb-5">
                 <div class="portfolio-item card">
                     <img src="/assets/img/work/monbi.png" alt="Monbi Tracing System" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title fg-theme">Monbi Tracing System</h5>
+                        <h5 class="card-title fg-theme">Monbi Tracing System | Web App</h5>
                         <p class="card-text text-justify">This project hones my data comprehension skills and proficiency in creating effective visualizations using Tableau. I improved my ability to design clear and captivating visualizations.</p>
-                        <a href='/content/monbi.html' target='_blank' class="fg-theme">Read More</a>
+                        <a href='/content/pages/monbi.html' target='_blank' class="fg-theme">Read More</a>
                     </div>
                 </div>
             </div>
@@ -337,8 +349,7 @@
       </div>
     </div>
     <!-- End footer -->
-
-    <script src="/assets/js/jquery-3.5.1.min.js"></script>
+<script src="/assets/js/jquery-3.5.1.min.js"></script>
 
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
@@ -359,25 +370,16 @@
     <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
 
     <script src="/assets/js/google-maps.js"></script>
+    <script src="/assets/js/google-translate.js"></script>
 
-    <script src="../assets/js/minibar-virtual.js"></script>
+    <script src="/assets/js/topbar-virtual.js"></script>
+    <script src="/assets/js/util.js"></script>
 
     <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
     ></script>
-    <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          {
-            pageLanguage: "en",
-            layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-          },
-          "google_translate_element"
-        );
-      }
-    </script>
 
     <script
       type="text/javascript"
