memperbaiki single page

--- a/content/pages/credit-card.html
+++ b/content/pages/credit-card.html
@@ -138,10 +138,9 @@
         <div id="google_translate_element" class="mb-3"></div>
         <select class="custom-select d-block my-2" id="change-page">
           <option value="">Choose Page</option>
-          <option value="index">Home</option>
-          <option value="blog">Blog</option>
-          <!-- <option value="index-2">Minibar</option> -->
-          <option value="portfolio">Portfolio</option>
+          <option value="../../index">Home</option>
+          <option value="../../blog">Blog</option>
+          <option value="../../portfolio">Portfolio</option>
         </select>
       </div>
     </div>
