--- a/content/pages/bcs.html
+++ b/content/pages/bcs.html
@@ -139,9 +139,9 @@
         <div id="google_translate_element" class="mb-3"></div>
         <select class="custom-select d-block my-2" id="change-page">
           <option value="">Choose Page</option>
-          <option value="index">Home</option>
-          <option value="blog">Blog</option>
-          <option value="portfolio">Portfolio</option>
+          <option value="../../index">Home</option>
+          <option value="../../blog">Blog</option>
+          <option value="../../portfolio">Portfolio</option>
         </select>
       </div>
     </div>
