menambahkan halaman 404 dan mmeperbaiki liked to CV

--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
               <li>Based In : <b>Karawang, West Java, Indonesia</b></li>
               <li>Ambition : <b>I crave challenges and strive for success.</b></li>
             </ul>
-            <a href="/content/cv/CV-Tobi.pdf">
-              <button class="btn btn-theme-outline">Download CV</button>
+            <!-- <a href="/content/cv/CV-Tobi.pdf"> -->
+            <a href="https://wa.me/6285772936084?text=Hi%20Tobi%2C%0AI'm%20...%2C%20i've%20seen%20your%20portfolio%20on%20'tobiadnan.github.io'%20and%20I'm%20interested%20in%20getting%20to%20know%20you%20more.%20Please%20provide%20me%20with%20your%20current%20CV.%0AThank%20you.%0A%0ABest%20regards%2C%0A..." target="_blank">
+              <button class="btn btn-theme-outline">Request for CV</button>
             </a>
           </div>
         </div>
@@ -225,7 +226,7 @@
                 <div class="title">2023</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">Python Programming</a></h5>
+                    <h5><a class="fg-theme" href="404.html">Python Programming</a></h5>
                     <small>Mar - Jun 2023</small>
                   </div>
                   <p>🏨 <b>Cisco Networking Academy</b></p>
@@ -236,7 +237,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">Data Science</a></h5>
+                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802">Data Science</a></h5>
                     <small>Sep - Nov 2022</small>
                   </div>
                   <p>🏨 <b>Binar Academy</b></p>
@@ -253,7 +254,7 @@
                 <div class="title">2023</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">Data Engineer Apprenticeship</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/credit-card.html">Data Engineer Apprenticeship</a></h5>
                     <small>Jun - Aug 2023</small>
                   </div>
                   <p>🏨 <b>Data Fellowship - IYKRA</b></p>
@@ -264,7 +265,7 @@
                 <!-- <div class="title">2023</div> -->
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">Website Developer Intern</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/monbi.html">Website Developer Intern</a></h5>
                     <small>Feb - May 2023</small>
                   </div>
                   <p>🏢 <b>Perum Percetakan Uang RI</b></p>
@@ -275,7 +276,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">System Analyst Intern</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/bcs.html">System Analyst Intern</a></h5>
                     <small>Aug - Dec 2022</small>
                   </div>
                   <p>🏢 <b>PT. Bridgestone Tire Indonesia</b></p>
@@ -286,7 +287,7 @@
                 <!-- <div class="title">2022</div> -->
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="#">Data Analyst Intern</a></h5>
+                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/indonesias-2021-literacy-levels-and-reading-habits-366dab8b8370">Data Analyst Intern</a></h5>
                     <small>Feb - Jul 2022</small>
                   </div>
                   <p>🏢 <b>Generasi Gigih 2.0 | GoTo Impact Foundation</b></p>
@@ -1032,7 +1033,7 @@
             </p>
           </div>
           <div class="modal-footer d-flex justify-content-between">
-            <a href="#" role="button" target='_blank' class="btn btn-theme btn-sm">go to project</a>
+            <a href="404.html" role="button" target='_blank' class="btn btn-theme btn-sm">go to project</a>
             <button type="button" class="btn fg-theme" data-dismiss="modal">Oke</button>
           </div>
         </div>
