--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>404 HTML Template by Colorlib</title>
+    <title>Page is not available</title>
 
     <!-- Google font -->
     <link
@@ -32,8 +32,8 @@
           <h1>4<span>0</span>4</h1>
         </div>
         <p>
-          The page you are looking for might have been removed had its name
-          changed or is temporarily unavailable or is being developed.
+          Oops. The page you are looking for might have been removed had its
+          name changed or is temporarily unavailable or is being developed.
         </p>
         <a href="/">home page</a>
       </div>
