--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/assets/vendor/animate/animate.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/vendor/owl-carousel/owl.carousel.css"/>
-    <link rel="stylesheet" type="text/css" href="/assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/vendor/nice-select/css/nice-select.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/vendor/fancybox/css/jquery.fancybox.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/virtual.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/topbar.virtual.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css"/> -->
     
   </head>
 
@@ -151,6 +151,11 @@
                   >Contact</a
                 >
               </li>
+               <li class="nav-item">
+                <a href="https://medium.com/@tobyadnan" target="_blank"  class="nav-link" data-animate="scrolling"
+                  >Medium</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -164,7 +169,7 @@
           <h1 style="font-size: 90px;" class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
   
           <p>
-            <img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Freshgraduate;Tech+Entushiast;Data+Analyst;System+Analyst;Web+Developer" alt="Typing SVG"/>
+            <img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Freshgraduate;Tech+Entushiast;💓+learning" alt="Typing SVG"/>
           </p>
           <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
         </div>
@@ -195,9 +200,10 @@
               <li>Ambition : <b>I crave challenges and strive for success.</b></li>
             </ul>
             <!-- <a href="/content/cv/CV-Tobi.pdf"> -->
-            <a href="https://wa.me/6285772936084?text=Hi%20Tobi%2C%0AI'm%20...%2C%20i've%20seen%20your%20portfolio%20on%20'tobiadnan.github.io'%20and%20I'm%20interested%20in%20getting%20to%20know%20you%20more.%20Please%20provide%20me%20with%20your%20current%20CV.%0AThank%20you.%0A%0ABest%20regards%2C%0A..." target="_blank">
+            <!-- <a href="https://wa.me/6285772936084?text=Hi%20Tobi%2C%0Amy%20name%20is%20...,%20i%20am%20from%20...%2C%20I%20saw%20your%20portfolio%20on%20'tobiadnan.github.io'%20and%20I'm%20interested%20in%20getting%20to%20know%20you%20more.%20Please%20provide%20me%20with%20your%20current%20CV.%0AThank%20you.%0A%0ABest%20regards%2C%0A..." target="_blank">
               <button class="btn btn-theme-outline">Request for CV</button>
-            </a>
+            </a> -->
+            <button type="button" class="btn btn-theme-outline" data-toggle="modal" data-target="#modal_cv">Ask a CV</button>
           </div>
         </div>
       </div>
@@ -237,7 +243,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802">Data Science</a></h5>
+                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802" target="_blank">Data Science</a></h5>
                     <small>Sep - Nov 2022</small>
                   </div>
                   <p>🏨 <b>Binar Academy</b></p>
@@ -254,7 +260,7 @@
                 <div class="title">2023</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="/content/pages/credit-card.html">Data Engineer Apprenticeship</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/credit-card.html" target="_blank">Data Engineer Apprenticeship</a></h5>
                     <small>Jun - Aug 2023</small>
                   </div>
                   <p>🏨 <b>Data Fellowship - IYKRA</b></p>
@@ -265,7 +271,7 @@
                 <!-- <div class="title">2023</div> -->
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="/content/pages/monbi.html">Website Developer Intern</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/monbi.html" target="_blank">Website Developer Intern</a></h5>
                     <small>Feb - May 2023</small>
                   </div>
                   <p>🏢 <b>Perum Percetakan Uang RI</b></p>
@@ -276,7 +282,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="/content/pages/bcs.html">System Analyst Intern</a></h5>
+                    <h5><a class="fg-theme" href="/content/pages/bcs.html" target="_blank">System Analyst Intern</a></h5>
                     <small>Aug - Dec 2022</small>
                   </div>
                   <p>🏢 <b>PT. Bridgestone Tire Indonesia</b></p>
@@ -287,7 +293,7 @@
                 <!-- <div class="title">2022</div> -->
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/indonesias-2021-literacy-levels-and-reading-habits-366dab8b8370">Data Analyst Intern</a></h5>
+                    <h5><a class="fg-theme" href="https://medium.com/@tobyadnan/indonesias-2021-literacy-levels-and-reading-habits-366dab8b8370" target="_blank">Data Analyst Intern</a></h5>
                     <small>Feb - Jul 2022</small>
                   </div>
                   <p>🏢 <b>Generasi Gigih 2.0 | GoTo Impact Foundation</b></p>
@@ -1167,7 +1173,26 @@
       </div>
     </div>
 
-
+    <!-- cv -->
+    <!-- Modal -->
+    <div class="modal fade" id="modal_cv" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Ask for a CV?</h5>
+            <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            You will ask for a CV and leave this page, please tell me you got the information from tobiadnan.github.io... ceeers 🍾🥂
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <a type="button" class="btn btn-primary" href="https://t.me/tobyadnan">Awkheyy</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <!-- end modal -->
 
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
@@ -1175,8 +1200,6 @@
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
 
     <script src="/assets/vendor/owl-carousel/owl.carousel.min.js"></script>
-
-    <script src="/assets/vendor/perfect-scrollbar/js/perfect-scrollbar.js"></script>
 
     <script src="/assets/vendor/isotope/isotope.pkgd.min.js"></script>
 
@@ -1206,5 +1229,6 @@
       type="text/javascript"
       src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
     ></script>
+
   </body>
 </html>
