adding preview dashboard to credit card's page

--- a/content/pages/credit-card.html
+++ b/content/pages/credit-card.html
@@ -263,11 +263,11 @@
             stack employed, as well as an overview of the dashboard that has
             been developed.
           </p>
-          <div class="text-center mb-3">
+          <div class="container text-center mb-3">
             <iframe
               src="https://docs.google.com/presentation/d/e/2PACX-1vR_pPrrSPBThRzwmRwRvgIPmpHQGNktiJ3oCJCK1qD8vdsbhiIEv8rJzycAY6uOGp2Jc7HEJ5CyX2Xi/embed?start=false&loop=false&delayms=5000"
               frameborder="0"
-              width="960"
+              width="848"
               height="569"
               allowfullscreen="true"
               mozallowfullscreen="true"
@@ -280,8 +280,28 @@
             clarity in our approach to achieving better credit card approval
             predictions.
           </p>
-          <h3>Access The Dashboard</h3>
+          <h3>Access The Dashboard</h3><br>
           <p class="mb-3">
+             <div class="container text-center wow fadeInUp mb-3">
+            <img
+              class="img-fluid"
+              width="848"
+              height="340"
+              src="/assets/img/work/credit1.png"
+              alt="Credit Card Prediction Dashboard"
+              title="Credit Card Prediction"
+            />
+          </div>
+          <div class="container text-center wow fadeInUp mb-3">
+            <img
+              class="img-fluid"
+              width="848"
+              height="340"
+              src="/assets/img/work/credit2.png"
+              alt="Credit Card Prediction Dashboard"
+              title="Credit Card Prediction"
+            />
+          </div><br><br>
             If you would like to access the dashboard directly and witness our
             credit card approval prediction system in action, please click on
             the following link:
@@ -294,7 +314,8 @@
             >. This link will provide you with real-time access to our
             dashboard, allowing you to explore the functionality and insights it
             offers. We welcome you to experience firsthand the power of our
-            data-driven solution.
+            data-driven solution. 
+
           </p>
         </div>
       </div>
